- Changed "next" method logic in EnumStateDto, - Added test for next method in EnumStateDto, - Nonnull verification in nextState in boardService, - Changed argument in boardBuilder in BoardServiceTest to be able to set a value when creating the board.